// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - event Event listing renders correctly 1`] = `
<jest>
  <header
    class="bcl-header bcl-header--eu"
  >
    <!-- navbar_settings -->
    <nav
      aria-label="Top Navigation"
      class="w-100 shadow-sm navbar navbar-expand-lg navbar-light"
    >
      <div
        class="container"
      >
        <a
          class="navbar-brand"
          href=""
        >
          <img
            alt="desktop project logo"
            class="d-none d-lg-block"
            src="https://cdn1.fpfis.tech.ec.europa.eu/ecl/v3.0.2/eu/images/logo/standard-version/positive/logo-eu--en.svg"
          />
          <img
            alt="mobile project logo"
            class="d-lg-none"
            src="https://cdn1.fpfis.tech.ec.europa.eu/ecl/v3.0.2/eu/images/logo/condensed-version/positive/logo-eu--en.svg"
          />
        </a>
        <ul
          class="nav"
        >
          <li
            class="nav-item"
          >
            <a
              class="d-none d-lg-block nav-link"
              href="#"
            >
              <svg
                class="me-2-5 bi icon--s"
              >
                <use
                  xlink:href="/icons.svg#link"
                />
              </svg>
              Link
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="d-none d-lg-block nav-link"
              href="#"
            >
              <svg
                class="me-2-5 bi icon--s"
              >
                <use
                  xlink:href="/icons.svg#link"
                />
              </svg>
              Link
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="text-center nav-link"
              data-bs-target="#languageModal"
              data-bs-toggle="modal"
              href="#"
            >
              <svg
                class="me-lg-2-5 bi icon--xs"
              >
                <use
                  xlink:href="/icons.svg#chat-left-dots-fill"
                />
              </svg>
              <span
                class="d-block d-lg-inline-block"
              >
                English
              </span>
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="text-center nav-link"
              data-bs-target="#loginModal"
              data-bs-toggle="modal"
              href="#"
            >
              <svg
                class="me-lg-2-5 bi icon--xs"
              >
                <use
                  xlink:href="/icons.svg#person-fill"
                />
              </svg>
              <span
                class="d-block d-lg-inline-block"
              >
                Log in
              </span>
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="notification mt-2 mt-lg-0 nav-link"
              href="#"
            >
              <svg
                class="bi icon--s"
              >
                <use
                  xlink:href="/icons.svg#bell-fill"
                />
              </svg>
              <span
                class="badge bg-danger"
              >
                5
              </span>
            </a>
          </li>
        </ul>
      </div>
    </nav>
    <!-- project name -->
    <div
      class="bcl-header__project"
    >
      <div
        class="container"
      >
        <img
          alt="project logo"
          class="d-none d-lg-inline-block"
          src="https://inno-ecl.s3.amazonaws.com/media/examples/placeholder.svg"
        />
        <div
          class="bcl-header__site-name"
        >
          Project name
        </div>
      </div>
    </div>
    <!-- navbar -->
    <nav
      class="bcl-header__navbar navbar navbar-expand-lg navbar-dark"
    >
      <div
        class="container"
      >
        <button
          aria-controls="navbarNavDropdown"
          aria-expanded="false"
          aria-label="Toggle navigation"
          class="navbar-toggler"
          data-bs-target="#navbarNavDropdown"
          data-bs-toggle="collapse"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="collapse navbar-collapse"
          id="navbarNavDropdown"
        >
          <ul
            class="me-auto navbar-nav"
          >
            <li
              class="nav-item"
            >
              <a
                aria-current="page"
                class="nav-link active"
                href="/example"
              >
                Home
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link"
                href="/example"
              >
                Item 01
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link"
                href="/example"
              >
                Item 02
              </a>
            </li>
            <li
              class="nav-item dropdown"
            >
              <a
                aria-expanded="false"
                class="nav-link dropdown-toggle"
                data-bs-toggle="dropdown"
                href="#"
                id="navbarDropdownMenuLink"
                role="button"
              >
                Dropdown link
              </a>
              <ul
                aria-labelledby="navbarDropdownMenuLink"
                class="dropdown-menu"
              >
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Action
                  </a>
                </li>
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Another action
                  </a>
                </li>
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Something else here
                  </a>
                </li>
              </ul>
            </li>
          </ul>
          <form
            class="d-flex mt-3 mt-lg-0"
          >
            <label
              class="form-label visually-hidden"
              for="inlineFormInputGroupSearch"
            >
              Search
            </label>
            <input
              class="border-start-0 rounded-0 rounded-start form-control"
              id="inlineFormInputGroupSearch"
              placeholder="Search"
              required="true"
              type="text"
            />
            <button
              class="border-start-0 rounded-0 rounded-end btn btn-light btn-md"
              type="button"
            >
              <span
                class="visually-hidden"
              >
                search
              </span>
              <svg
                class="bi icon--fluid"
              >
                <use
                  xlink:href="/icons.svg#search"
                />
              </svg>
            </button>
          </form>
        </div>
      </div>
    </nav>
    <!-- breadcrumbs -->
    <div
      class="container"
    >
      <nav
        aria-label="breadcrumb"
        class="mt-3"
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item d-none d-md-block"
          >
            <a
              href="/example"
            >
              Home
            </a>
          </li>
          <li
            class="breadcrumb-item d-none d-md-block"
          >
            <a
              href="/example"
            >
              European Commission
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            <a
              href="/example"
            >
              <svg
                class="d-md-none ms-0 me-2 me-2-5 bi icon--s"
              >
                <use
                  xlink:href="/icons.svg#arrow-left"
                />
              </svg>
              About the European Commission
            </a>
          </li>
          <li
            aria-current="page"
            class="breadcrumb-item d-none d-md-block active"
          >
            News
          </li>
        </ol>
      </nav>
    </div>
  </header>
  <div
    aria-hidden="true"
    aria-labelledby="loginModalLabel"
    class="modal fade"
    id="loginModal"
    tabindex="-1"
  >
    <div
      class="modal-dialog"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <h5
            class="modal-title"
            id="loginModalLabel"
          >
            Log in
          </h5>
          <button
            aria-label="Close"
            class="btn-close"
            data-bs-dismiss="modal"
            type="button"
          />
        </div>
        <div
          class="modal-body"
        >
          <h5>
            Disclaimer 1
          </h5>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum accumsan eget orci eu aliquet. Suspendisse potenti. Integer volutpat, nisl et placerat tincidunt
          </p>
          <h5>
            Disclaimer 2
          </h5>
          <p>
            Duis bibendum tristique lobortis. Nam luctus nisi sit amet turpis faucibus, ut dapibus elit sollicitudin. Phasellus a massa magna. Nullam ac imperdiet leo.
          </p>
        </div>
        <div
          class="modal-footer"
        >
          <button
            class="btn btn-secondary"
            data-bs-dismiss="modal"
            type="button"
          >
            Close
          </button>
          <button
            class="btn btn-primary"
            type="button"
          >
            Access EU login
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    aria-labelledby="languageModalLabel"
    class="bcl-language modal fade"
    id="languageModal"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-fullscreen"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <h5
            class="modal-title"
            id="languageeModalLabel"
          >
            Select your language
          </h5>
          <button
            aria-label="Close"
            class="btn-close"
            data-bs-dismiss="modal"
            type="button"
          />
        </div>
        <div
          class="modal-body"
        >
          <div
            class="container"
          >
            <div
              class="row"
            >
              <div
                class="col col-lg-8 offset-lg-2"
              >
                <h5
                  class="bcl-language__title"
                >
                  EU official languages
                </h5>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col col-lg-4 offset-lg-2"
              >
                <div
                  class="bcl-language__list"
                >
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 01
                  </a>
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 02
                  </a>
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 03
                  </a>
                </div>
              </div>
              <div
                class="col col-lg-4"
              >
                <div
                  class="bcl-language__list"
                >
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 04
                  </a>
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 05
                  </a>
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 06
                  </a>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col col-lg-8 offset-lg-2"
              >
                <h5
                  class="bcl-language__title"
                >
                  Non EU languages
                </h5>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col col-lg-4 offset-lg-2"
              >
                <div
                  class="bcl-language__list"
                >
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 07
                  </a>
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 08
                  </a>
                </div>
              </div>
              <div
                class="col col-lg-4"
              >
                <div
                  class="bcl-language__list"
                >
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 09
                  </a>
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 10
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="modal-footer"
        >
          <button
            class="btn btn-secondary"
            data-bs-dismiss="modal"
            type="button"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
  <main>
    <div
      class="bcl-content-banner pt-lg-4-75 pb-md-4-75 pb-4 pt-4 bg-lighter"
    >
      <div
        class="container"
      >
        <div
          class="row"
        >
          <div
            class="bg-transparent border-0 card"
          >
            <div
              class="row"
            >
              <div
                class="col-md-8 col-lg-9 col-xxl-8"
              >
                <div
                  class="card-body pt-0 px-0 pb-0"
                >
                  <h2
                    class="fw-bold card-title"
                  >
                    Translation, Interpreting, Culture 2: Human Factor in translation Technologies
                  </h2>
                  <p>
                    
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse volutpat ultricies massa, a dapibus libero porta nec.
      Sed facilisis dictum vestibulum. Fusce commodo hendrerit diam, pretium tempus leo varius sit amet.
      Etiam interdum, orci at sagittis luctus, lorem libero tempus mauris, a fermentum libero orci semper lacus.
      Duis tristique fringilla magna, eu egestas dolor molestie non.
      
                  </p>
                  <div
                    class="mt-2-5"
                  >
                    <span
                      class="mb-2 me-2 badge rounded-pill badge-outline-primary"
                    >
                      Event
                    </span>
                    <span
                      class="mb-2 me-2 badge rounded-pill badge-outline-primary"
                    >
                      Culture
                    </span>
                    <span
                      class="mb-2 badge rounded-pill badge-outline-primary"
                    >
                      Technology
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="container mt-md-4-75 mt-4"
    >
      <div
        class="row"
      >
        <div
          class="col-12 col-lg-3"
        >
          <nav
            class="bcl-offcanvas offcanvas-start bcl-inpage-navigation position-sticky"
            id="bcl-offcanvas"
          >
            <h5>
              [object Object]
            </h5>
            <ul
              class="nav nav-pills flex-column"
            />
          </nav>
        </div>
        <div
          class="col-12 col-lg-9 col-xxl-8"
        >
          <dl
            class="mt-3 mb-4 d-md-grid grid-3-9"
          >
            <dt
              class="d-flex"
            >
              <svg
                class="me-2 mt-1 bi icon--xs"
              >
                <use
                  xlink:href="/icons.svg#calendar-fill"
                />
              </svg>
              <p
                class="mb-0 d-inline-block"
              >
                Date
              </p>
            </dt>
            <dd>
              19/12/2021 to 21/12/2021
            </dd>
            <dt
              class="d-flex"
            >
              <svg
                class="me-2 mt-1 bi icon--xs"
              >
                <use
                  xlink:href="/icons.svg#geo-alt-fill"
                />
              </svg>
              <p
                class="mb-0 d-inline-block"
              >
                Location
              </p>
            </dt>
            <dd>
              <div>
                <svg
                  class="me-2 bi icon--fluid"
                >
                  <use
                    xlink:href="/flags.svg#spain"
                  />
                </svg>
                <p
                  class="mb-0 d-inline-block"
                >
                  Barcelona, Spain
                </p>
              </div>
            </dd>
          </dl>
          <h3
            class="fw-bold my-4"
            id="item-1"
          >
            Description
          </h3>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sit amet eleifend tortor. In facilisis eros vitae turpis ullamcorper,
  a euismod dolor lacinia. Nam facilisis ipsum et sollicitudin imperdiet. Curabitur a efficitur ante. Phasellus non felis laoreet,
  posuere ante ut, rhoncus tortor. Proin sed erat vel nisl luctus vulputate. Nunc tristique ultricies turpis, eu dictum enim ultrices vel.
  Sed posuere at leo sit amet placerat. Sed dapibus viverra urna ac pretium. Praesent et laoreet erat, eget volutpat metus. Duis ac augue
  sed tortor elementum dignissim in sit amet velit. Nullam nec viverra mi.
  
          </p>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sit amet eleifend tortor. In facilisis eros vitae turpis ullamcorper,
  a euismod dolor lacinia. Nam facilisis ipsum et sollicitudin imperdiet.
  
          </p>
          <h3
            class="fw-bold my-4"
            id="item-2"
          >
            Related documents
          </h3>
          <div
            class="mb-3-5 border rounded"
          >
            <div
              class="px-3-5 py-3"
            >
              <div
                class="d-flex"
              >
                <svg
                  class="mt-1 icon--file bi icon--xl"
                >
                  <use
                    xlink:href="/icons.svg#file-pdf-fill"
                  />
                </svg>
                <div
                  class="w-100 d-md-flex ms-2-5"
                >
                  <div
                    class="flex-grow-1"
                  >
                    <p
                      class="fw-bold m-0"
                    >
                      File title
                    </p>
                    <small
                      class="fw-bold m-0"
                    >
                      English
                      <span
                        class="fw-normal"
                      >
                         (16.2 MB - PDF)
                      </span>
                    </small>
                  </div>
                  <a
                    class="text-underline-hover align-self-center d-inline-block mt-1 mt-md-0"
                    download="/example.html"
                    href="#"
                  >
                    Download
                    <svg
                      class="ms-2-5 bi icon--fluid"
                    >
                      <use
                        xlink:href="/icons.svg#download"
                      />
                    </svg>
                  </a>
                </div>
              </div>
            </div>
          </div>
          <div
            class="mb-3-5 border rounded"
          >
            <div
              class="px-3-5 py-3"
            >
              <div
                class="d-flex"
              >
                <svg
                  class="mt-1 icon--file bi icon--xl"
                >
                  <use
                    xlink:href="/icons.svg#file-pdf-fill"
                  />
                </svg>
                <div
                  class="w-100 d-md-flex ms-2-5"
                >
                  <div
                    class="flex-grow-1"
                  >
                    <p
                      class="fw-bold m-0"
                    >
                      File title
                    </p>
                    <small
                      class="fw-bold m-0"
                    >
                      English
                      <span
                        class="fw-normal"
                      >
                         (16.2 MB - PDF)
                      </span>
                    </small>
                  </div>
                  <a
                    class="text-underline-hover align-self-center d-inline-block mt-1 mt-md-0"
                    download="/example.html"
                    href="#"
                  >
                    Download
                    <svg
                      class="ms-2-5 bi icon--fluid"
                    >
                      <use
                        xlink:href="/icons.svg#download"
                      />
                    </svg>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
  <footer
    class="mt-4 bcl-footer bcl-footer--neutral"
  >
    <div
      class="container"
    >
      <div
        class="pt-4 pt-lg-5 row"
      >
        <div
          class="col-12 col-lg-4"
        >
          <p
            class="fw-bold mb-2"
          >
            [Project name]
          </p>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque in sagittis dolor.
          </p>
        </div>
        <div
          class="col-12 col-lg-4 pb-4 pb-lg-0"
        >
          <p
            class="fw-bold border-bottom pb-2 mb-2"
          >
            Contact [project name]
          </p>
          <p>
            Contact information of the DG
          </p>
          <p
            class="fw-bold border-bottom pb-2 mt-3 mb-2"
          >
            Follow us on social media
          </p>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            <svg
              class="me-2 me-2-5 bi icon--xs"
            >
              <use
                xlink:href="/icons.svg#facebook"
              />
            </svg>
            Facebook
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            <svg
              class="me-2 me-2-5 bi icon--xs"
            >
              <use
                xlink:href="/icons.svg#twitter"
              />
            </svg>
            Twitter
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            <svg
              class="me-2 me-2-5 bi icon--xs"
            >
              <use
                xlink:href="/icons.svg#linkedin"
              />
            </svg>
            Linkedin
          </a>
        </div>
        <div
          class="col-12 col-lg-4"
        >
          <p
            class="fw-bold border-bottom pb-2 mb-2"
          >
            About us
          </p>
          <p>
            Information about the DG
          </p>
          <p
            class="fw-bold border-bottom pb-2 mb-2"
          >
            Optional links
          </p>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Link
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Link
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Link
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Link
          </a>
        </div>
      </div>
      <div
        class="pb-4 pb-lg-5 mt-4 mt-lg-5 bcl-footer__bordered-row row"
      >
        <div
          class="col-12 col-lg-4"
        >
          <p
            class="fw-bold pb-2 mb-2"
          >
            More information on:
          </p>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Link
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Link
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Link
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Link
          </a>
        </div>
      </div>
    </div>
  </footer>
</jest>
`;

exports[`OE - event Event page renders correctly 1`] = `
<jest>
  <header
    class="bcl-header bcl-header--eu"
  >
    <!-- navbar_settings -->
    <nav
      aria-label="Top Navigation"
      class="w-100 shadow-sm navbar navbar-expand-lg navbar-light"
    >
      <div
        class="container"
      >
        <a
          class="navbar-brand"
          href=""
        >
          <img
            alt="desktop project logo"
            class="d-none d-lg-block"
            src="https://cdn1.fpfis.tech.ec.europa.eu/ecl/v3.0.2/eu/images/logo/standard-version/positive/logo-eu--en.svg"
          />
          <img
            alt="mobile project logo"
            class="d-lg-none"
            src="https://cdn1.fpfis.tech.ec.europa.eu/ecl/v3.0.2/eu/images/logo/condensed-version/positive/logo-eu--en.svg"
          />
        </a>
        <ul
          class="nav"
        >
          <li
            class="nav-item"
          >
            <a
              class="d-none d-lg-block nav-link"
              href="#"
            >
              <svg
                class="me-2-5 bi icon--s"
              >
                <use
                  xlink:href="/icons.svg#link"
                />
              </svg>
              Link
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="d-none d-lg-block nav-link"
              href="#"
            >
              <svg
                class="me-2-5 bi icon--s"
              >
                <use
                  xlink:href="/icons.svg#link"
                />
              </svg>
              Link
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="text-center nav-link"
              data-bs-target="#languageModal"
              data-bs-toggle="modal"
              href="#"
            >
              <svg
                class="me-lg-2-5 bi icon--xs"
              >
                <use
                  xlink:href="/icons.svg#chat-left-dots-fill"
                />
              </svg>
              <span
                class="d-block d-lg-inline-block"
              >
                English
              </span>
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="text-center nav-link"
              data-bs-target="#loginModal"
              data-bs-toggle="modal"
              href="#"
            >
              <svg
                class="me-lg-2-5 bi icon--xs"
              >
                <use
                  xlink:href="/icons.svg#person-fill"
                />
              </svg>
              <span
                class="d-block d-lg-inline-block"
              >
                Log in
              </span>
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="notification mt-2 mt-lg-0 nav-link"
              href="#"
            >
              <svg
                class="bi icon--s"
              >
                <use
                  xlink:href="/icons.svg#bell-fill"
                />
              </svg>
              <span
                class="badge bg-danger"
              >
                5
              </span>
            </a>
          </li>
        </ul>
      </div>
    </nav>
    <!-- project name -->
    <div
      class="bcl-header__project"
    >
      <div
        class="container"
      >
        <img
          alt="project logo"
          class="d-none d-lg-inline-block"
          src="https://inno-ecl.s3.amazonaws.com/media/examples/placeholder.svg"
        />
        <div
          class="bcl-header__site-name"
        >
          Project name
        </div>
      </div>
    </div>
    <!-- navbar -->
    <nav
      class="bcl-header__navbar navbar navbar-expand-lg navbar-dark"
    >
      <div
        class="container"
      >
        <button
          aria-controls="navbarNavDropdown"
          aria-expanded="false"
          aria-label="Toggle navigation"
          class="navbar-toggler"
          data-bs-target="#navbarNavDropdown"
          data-bs-toggle="collapse"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="collapse navbar-collapse"
          id="navbarNavDropdown"
        >
          <ul
            class="me-auto navbar-nav"
          >
            <li
              class="nav-item"
            >
              <a
                aria-current="page"
                class="nav-link active"
                href="/example"
              >
                Home
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link"
                href="/example"
              >
                Item 01
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link"
                href="/example"
              >
                Item 02
              </a>
            </li>
            <li
              class="nav-item dropdown"
            >
              <a
                aria-expanded="false"
                class="nav-link dropdown-toggle"
                data-bs-toggle="dropdown"
                href="#"
                id="navbarDropdownMenuLink"
                role="button"
              >
                Dropdown link
              </a>
              <ul
                aria-labelledby="navbarDropdownMenuLink"
                class="dropdown-menu"
              >
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Action
                  </a>
                </li>
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Another action
                  </a>
                </li>
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Something else here
                  </a>
                </li>
              </ul>
            </li>
          </ul>
          <form
            class="d-flex mt-3 mt-lg-0"
          >
            <label
              class="form-label visually-hidden"
              for="inlineFormInputGroupSearch"
            >
              Search
            </label>
            <input
              class="border-start-0 rounded-0 rounded-start form-control"
              id="inlineFormInputGroupSearch"
              placeholder="Search"
              required="true"
              type="text"
            />
            <button
              class="border-start-0 rounded-0 rounded-end btn btn-light btn-md"
              type="button"
            >
              <span
                class="visually-hidden"
              >
                search
              </span>
              <svg
                class="bi icon--fluid"
              >
                <use
                  xlink:href="/icons.svg#search"
                />
              </svg>
            </button>
          </form>
        </div>
      </div>
    </nav>
    <!-- breadcrumbs -->
    <div
      class="container"
    >
      <nav
        aria-label="breadcrumb"
        class="mt-3"
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item d-none d-md-block"
          >
            <a
              href="/example"
            >
              Home
            </a>
          </li>
          <li
            class="breadcrumb-item d-none d-md-block"
          >
            <a
              href="/example"
            >
              European Commission
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            <a
              href="/example"
            >
              <svg
                class="d-md-none ms-0 me-2 me-2-5 bi icon--s"
              >
                <use
                  xlink:href="/icons.svg#arrow-left"
                />
              </svg>
              About the European Commission
            </a>
          </li>
          <li
            aria-current="page"
            class="breadcrumb-item d-none d-md-block active"
          >
            News
          </li>
        </ol>
      </nav>
    </div>
  </header>
  <div
    aria-hidden="true"
    aria-labelledby="loginModalLabel"
    class="modal fade"
    id="loginModal"
    tabindex="-1"
  >
    <div
      class="modal-dialog"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <h5
            class="modal-title"
            id="loginModalLabel"
          >
            Log in
          </h5>
          <button
            aria-label="Close"
            class="btn-close"
            data-bs-dismiss="modal"
            type="button"
          />
        </div>
        <div
          class="modal-body"
        >
          <h5>
            Disclaimer 1
          </h5>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum accumsan eget orci eu aliquet. Suspendisse potenti. Integer volutpat, nisl et placerat tincidunt
          </p>
          <h5>
            Disclaimer 2
          </h5>
          <p>
            Duis bibendum tristique lobortis. Nam luctus nisi sit amet turpis faucibus, ut dapibus elit sollicitudin. Phasellus a massa magna. Nullam ac imperdiet leo.
          </p>
        </div>
        <div
          class="modal-footer"
        >
          <button
            class="btn btn-secondary"
            data-bs-dismiss="modal"
            type="button"
          >
            Close
          </button>
          <button
            class="btn btn-primary"
            type="button"
          >
            Access EU login
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    aria-labelledby="languageModalLabel"
    class="bcl-language modal fade"
    id="languageModal"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-fullscreen"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <h5
            class="modal-title"
            id="languageeModalLabel"
          >
            Select your language
          </h5>
          <button
            aria-label="Close"
            class="btn-close"
            data-bs-dismiss="modal"
            type="button"
          />
        </div>
        <div
          class="modal-body"
        >
          <div
            class="container"
          >
            <div
              class="row"
            >
              <div
                class="col col-lg-8 offset-lg-2"
              >
                <h5
                  class="bcl-language__title"
                >
                  EU official languages
                </h5>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col col-lg-4 offset-lg-2"
              >
                <div
                  class="bcl-language__list"
                >
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 01
                  </a>
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 02
                  </a>
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 03
                  </a>
                </div>
              </div>
              <div
                class="col col-lg-4"
              >
                <div
                  class="bcl-language__list"
                >
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 04
                  </a>
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 05
                  </a>
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 06
                  </a>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col col-lg-8 offset-lg-2"
              >
                <h5
                  class="bcl-language__title"
                >
                  Non EU languages
                </h5>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col col-lg-4 offset-lg-2"
              >
                <div
                  class="bcl-language__list"
                >
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 07
                  </a>
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 08
                  </a>
                </div>
              </div>
              <div
                class="col col-lg-4"
              >
                <div
                  class="bcl-language__list"
                >
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 09
                  </a>
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 10
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="modal-footer"
        >
          <button
            class="btn btn-secondary"
            data-bs-dismiss="modal"
            type="button"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
  <main>
    <div
      class="bcl-content-banner pt-lg-4-75 pb-md-4-75 pb-4 pt-4 bg-lighter"
    >
      <div
        class="container"
      >
        <div
          class="row"
        >
          <div
            class="bg-transparent border-0 card"
          >
            <div
              class="row"
            >
              <div
                class="col-md-8 col-lg-9 col-xxl-8"
              >
                <div
                  class="card-body pt-0 px-0 pb-0"
                >
                  <h2
                    class="fw-bold card-title"
                  >
                    Translation, Interpreting, Culture 2: Human Factor in translation Technologies
                  </h2>
                  <p>
                    
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse volutpat ultricies massa, a dapibus libero porta nec.
      Sed facilisis dictum vestibulum. Fusce commodo hendrerit diam, pretium tempus leo varius sit amet.
      Etiam interdum, orci at sagittis luctus, lorem libero tempus mauris, a fermentum libero orci semper lacus.
      Duis tristique fringilla magna, eu egestas dolor molestie non.
      
                  </p>
                  <div
                    class="mt-2-5"
                  >
                    <span
                      class="mb-2 me-2 badge rounded-pill badge-outline-primary"
                    >
                      Event
                    </span>
                    <span
                      class="mb-2 me-2 badge rounded-pill badge-outline-primary"
                    >
                      Culture
                    </span>
                    <span
                      class="mb-2 badge rounded-pill badge-outline-primary"
                    >
                      Technology
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="container mt-md-4-75 mt-4"
    >
      <div
        class="row"
      >
        <div
          class="col-12 col-lg-3"
        >
          <nav
            class="d-none d-lg-block bcl-inpage-navigation position-sticky"
            id="bcl-inpage-navigation"
          >
            <h5>
              Page content
            </h5>
            <ul
              class="nav nav-pills flex-column"
            >
              <li
                class="nav-item"
              >
                <a
                  class="nav-link"
                  href="#item-1"
                >
                  Description
                </a>
              </li>
              <li
                class="nav-item"
              >
                <a
                  class="nav-link"
                  href="#item-2"
                >
                  Related documents
                </a>
              </li>
            </ul>
          </nav>
        </div>
        <div
          class="col-12 col-lg-9 col-xxl-8"
        >
          <dl
            class="mt-3 mb-4 d-md-grid grid-3-9"
          >
            <dt
              class="d-flex"
            >
              <svg
                class="me-2 mt-1 bi icon--xs"
              >
                <use
                  xlink:href="/icons.svg#calendar-fill"
                />
              </svg>
              <p
                class="mb-0 d-inline-block"
              >
                Date
              </p>
            </dt>
            <dd>
              19/12/2021 to 21/12/2021
            </dd>
            <dt
              class="d-flex"
            >
              <svg
                class="me-2 mt-1 bi icon--xs"
              >
                <use
                  xlink:href="/icons.svg#geo-alt-fill"
                />
              </svg>
              <p
                class="mb-0 d-inline-block"
              >
                Location
              </p>
            </dt>
            <dd>
              <div>
                <svg
                  class="me-2 bi icon--fluid"
                >
                  <use
                    xlink:href="/flags.svg#spain"
                  />
                </svg>
                <p
                  class="mb-0 d-inline-block"
                >
                  Barcelona, Spain
                </p>
              </div>
            </dd>
          </dl>
          <h3
            class="fw-bold my-4"
            id="item-1"
          >
            Description
          </h3>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sit amet eleifend tortor. In facilisis eros vitae turpis ullamcorper,
  a euismod dolor lacinia. Nam facilisis ipsum et sollicitudin imperdiet. Curabitur a efficitur ante. Phasellus non felis laoreet,
  posuere ante ut, rhoncus tortor. Proin sed erat vel nisl luctus vulputate. Nunc tristique ultricies turpis, eu dictum enim ultrices vel.
  Sed posuere at leo sit amet placerat. Sed dapibus viverra urna ac pretium. Praesent et laoreet erat, eget volutpat metus. Duis ac augue
  sed tortor elementum dignissim in sit amet velit. Nullam nec viverra mi.
  
          </p>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sit amet eleifend tortor. In facilisis eros vitae turpis ullamcorper,
  a euismod dolor lacinia. Nam facilisis ipsum et sollicitudin imperdiet.
  
          </p>
          <h3
            class="fw-bold my-4"
            id="item-2"
          >
            Related documents
          </h3>
          <div
            class="mb-3-5 border rounded"
          >
            <div
              class="px-3-5 py-3"
            >
              <div
                class="d-flex"
              >
                <svg
                  class="mt-1 icon--file bi icon--xl"
                >
                  <use
                    xlink:href="/icons.svg#file-pdf-fill"
                  />
                </svg>
                <div
                  class="w-100 d-md-flex ms-2-5"
                >
                  <div
                    class="flex-grow-1"
                  >
                    <p
                      class="fw-bold m-0"
                    >
                      File title
                    </p>
                    <small
                      class="fw-bold m-0"
                    >
                      English
                      <span
                        class="fw-normal"
                      >
                         (16.2 MB - PDF)
                      </span>
                    </small>
                  </div>
                  <a
                    class="text-underline-hover align-self-center d-inline-block mt-1 mt-md-0"
                    download="/example.html"
                    href="#"
                  >
                    Download
                    <svg
                      class="ms-2-5 bi icon--fluid"
                    >
                      <use
                        xlink:href="/icons.svg#download"
                      />
                    </svg>
                  </a>
                </div>
              </div>
            </div>
          </div>
          <div
            class="mb-3-5 border rounded"
          >
            <div
              class="px-3-5 py-3"
            >
              <div
                class="d-flex"
              >
                <svg
                  class="mt-1 icon--file bi icon--xl"
                >
                  <use
                    xlink:href="/icons.svg#file-pdf-fill"
                  />
                </svg>
                <div
                  class="w-100 d-md-flex ms-2-5"
                >
                  <div
                    class="flex-grow-1"
                  >
                    <p
                      class="fw-bold m-0"
                    >
                      File title
                    </p>
                    <small
                      class="fw-bold m-0"
                    >
                      English
                      <span
                        class="fw-normal"
                      >
                         (16.2 MB - PDF)
                      </span>
                    </small>
                  </div>
                  <a
                    class="text-underline-hover align-self-center d-inline-block mt-1 mt-md-0"
                    download="/example.html"
                    href="#"
                  >
                    Download
                    <svg
                      class="ms-2-5 bi icon--fluid"
                    >
                      <use
                        xlink:href="/icons.svg#download"
                      />
                    </svg>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
  <footer
    class="mt-4 bcl-footer bcl-footer--neutral"
  >
    <div
      class="container"
    >
      <div
        class="pt-4 pt-lg-5 row"
      >
        <div
          class="col-12 col-lg-4"
        >
          <p
            class="fw-bold mb-2"
          >
            [Project name]
          </p>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque in sagittis dolor.
          </p>
        </div>
        <div
          class="col-12 col-lg-4 pb-4 pb-lg-0"
        >
          <p
            class="fw-bold border-bottom pb-2 mb-2"
          >
            Contact [project name]
          </p>
          <p>
            Contact information of the DG
          </p>
          <p
            class="fw-bold border-bottom pb-2 mt-3 mb-2"
          >
            Follow us on social media
          </p>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            <svg
              class="me-2 me-2-5 bi icon--xs"
            >
              <use
                xlink:href="/icons.svg#facebook"
              />
            </svg>
            Facebook
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            <svg
              class="me-2 me-2-5 bi icon--xs"
            >
              <use
                xlink:href="/icons.svg#twitter"
              />
            </svg>
            Twitter
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            <svg
              class="me-2 me-2-5 bi icon--xs"
            >
              <use
                xlink:href="/icons.svg#linkedin"
              />
            </svg>
            Linkedin
          </a>
        </div>
        <div
          class="col-12 col-lg-4"
        >
          <p
            class="fw-bold border-bottom pb-2 mb-2"
          >
            About us
          </p>
          <p>
            Information about the DG
          </p>
          <p
            class="fw-bold border-bottom pb-2 mb-2"
          >
            Optional links
          </p>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Link
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Link
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Link
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Link
          </a>
        </div>
      </div>
      <div
        class="pb-4 pb-lg-5 mt-4 mt-lg-5 bcl-footer__bordered-row row"
      >
        <div
          class="col-12 col-lg-4"
        >
          <p
            class="fw-bold pb-2 mb-2"
          >
            More information on:
          </p>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Link
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Link
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Link
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Link
          </a>
        </div>
      </div>
    </div>
  </footer>
</jest>
`;
